[package]
name = "termbox2-rs"
version = "0.1.0"
edition = "2021"
description = "Simple Rust bindings to termbox2"
homepage = "https://github.com/benanders/termbox2-rs"
repository = "https://github.com/benanders/termbox2-rs"
license = "MIT"
readme = "README.md"

[lib]
name = "termbox2"

[build-dependencies]
cc = "1.0.73"

[dependencies]
bitflags = "1.3.2"

[[example]]
name = "simple"
